# aichemy

./: Cargo.toml  justfile
.github/workflows/: CI.yml
dev/: Cargo.toml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
rust/: Cargo.toml
rust/examples/: download_files_from_nomad_nmr.rs  plot_1d_nmr_spectrum.rs  read_nmr_jcamp_dx_file.rs
rust/src/: lib.rs  nmr.rs
rust/src/io/: jcamp_dx.rs
rust/src/nmr/: bruker.rs  io.rs  nomad_nmr.rs
rust/src/nmr/io/: jcamp_dx.rs  pulseprogram.rs
rust/src/nmr/io/jcamp_dx/: parser.rs  scanner.rs
rust/tests/: download.rs  jcamp_dx_nmr_parser.rs  nomad_nmr_download.rs
