[workspace]
resolver = "2"
members = [
  "rust",
  "python",
  "dev",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Lukas Turcani <lukasturcani93@gmail.com>"]
description = "Make AI in chemistry simple!"
license = "MIT"
homepage = "https://github.com/lukasturcani/aichemy"
repository = "https://github.com/lukasturcani/aichemy"
keywords = ["ai", "chemistry", "machine-learning", "ml"]
categories = ["science"]

[profile.release]
lto = true
codegen-units = 1
