[package]
name = "dev"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.20", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
mongodb = "3.1.0"


[[bin]]
name = "init_nomad_nmr_test_db"
path = "bin/init_nomad_nmr_test_db.rs"
