[package]
name = "aichemy"
version.workspace = true
edition.workspace = true

[dependencies]
bytes = "1.7.2"
chrono = "0.4.38"
home = "0.5.9"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"

[dev-dependencies]
tempfile = "3.13.0"
zip = { version = "2.2.0", default-features = false }
